# rustoceanic

./: Cargo.toml  LICENSE  README.md
src/: inventory_item.rs  lib.rs  player.rs  universe.rs
src/actors/: inventory_item.rs  mod.rs  player.rs
src/stages/: description.rs  mod.rs  place.rs  universe.rs
www/: index.html  package-lock.json  package.json  vite.config.js
www/src/js/: main.ts
www/src/styles/: style.css
