[package]
name = "rustoceanic"
version = "1.0.0"
authors = ["Shal1928 <Shal1928@yandex.ru>", "Zasonnik <Zasonnik@yandex.ru>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.108" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = "0.3.85"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.58"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[profile.dev]
opt-level = 0    
debug = true      